@@ -1,3 +1,9 @@
+2000-05-02  Alan Modra  <alan@linuxcare.com.au>
+
+	* binutils-all/objcopy.exp (simple copy): Clear xfail for hppa-linux.
+
+	* binutils-all/hppa/objdump.exp: Disable test for elf.
+
 2000-03-13  Nick Clifton  <nickc@cygnus.com>
 
 	* binutils-all/readelf.s: Adjust to match noew format of readelf
